# visu-cuda

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
env/: export.py  installer.sh  prelaunch.sh  virtualcan.sh
env/docker/: Dockerfile  requirements.txt
env/driver/: nv_ring.ko
inc/cuda/: core.hpp  draw.hpp  image.hpp  model.hpp  types.hpp
inc/utils/: color.hpp
inc/yolo/: base.hpp  bbox.hpp  core.hpp  draw.hpp  pose.hpp  segm.hpp  types.hpp
res/: frame.yuv
src/: bbox.cu  main.cpp  pose.cu  segm.cu
src/cuda/: core.cu  draw.cu  image.cu
test/: main.cpp
